# statistical_atlas_of_au

./: .gitignore  LICENSE.md  Pipfile  README.md  main.py  pyproject.toml  services.py  test_saau.py  utils.py
.github/workflows/: python.yaml
adf/: adf.py
bil/: Makefile  auxp.py  bil.c  bil.py  build_together.py  ffi.py  formats.json  sample.bil  sample.hdr  test_bil.py
saau/: __main__.py  collect.py  fonts.py  loading.py  sec  services.py  utils.py
saau/sections/: __init__.py  abs.py  aus_map.py  image_provider.py  shapely_utils.py  towns.py
saau/sections/age/: __init__.py  detailed.py  median.py
saau/sections/ancestry/: __init__.py  american.py  british.py  engwelsh.py  french.py  german.py  irish.py  italian.py  russian.py  swednorw.py
saau/sections/disability/: __init__.py  ambulatory.py  cognitive.py  hearing.py  vision.py
saau/sections/download/: __init__.py
saau/sections/education/: __init__.py
saau/sections/foreign/: __init__.py  born.py  noncitizen.py  parents.py  state-by-race.py  state.py
saau/sections/geology/: __init__.py  elevation.py
saau/sections/income/: __init__.py  median-household.py  poverty-rate.py  (+1 more)
saau/services/: __init__.py  aus_map.py  towns.py
saau/utils/: __init__.py  bil.py  header.py  py3_hook.py  shape.py
sections/: __init__.py  abs.py  aus_map.py  image_provider.py  shape.py
sections/age/: median.py
sections/landcover/: __init__.py  data.py  hay.py  rewrite.py  wheat.py
sections/population/: pop.py
sections/transportation/: __init__.py  data.py  ferrys.py  main.py
snapshots/: snap_test_saau.py
(+44 files in other folders)
