[tool.poetry]
name = "statistical-atlas-of-au"
version = "0.1.0"
authors = ["Elliana May <me@mause.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "statistical_atlas_of_au"}]
description = 'Statistical Atlas of Australia'

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

requests = "*"
betamax = "*"
cartopy = "*"
matplotlib = "*"
pandas = "~1.5.0"
seaborn = "*"
humanize = "*"
lxml = "*"
dill = "*"
tqdm = "*"
rasterio = "*"
gn-arcrest = "*"
cython = "*"
numpy = "*"
coloredlogs = "*"
pandasdmx = { git = "https://github.com/Mause/pandaSDMX", branch = "range-period", extras = ["cache"] }
fastparquet = "^2023.10.1"

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
